# didcot

./: .gitignore  .gitmodules  README.md
.github/scripts/: ci_espidf.sh  ci_linux.sh  ci_zephyr.sh
.github/workflows/: ci.yml
apps/: dthelpers.cmake
apps/espidf/: sdkconfig.freertos_stats
apps/espidf/didcot_dac/main/: CMakeLists.txt  main.c
apps/espidf/run_tests/: CMakeLists.txt
apps/linux/didcot_server/src/: main_httpd.c  main_websocket.c  parser.c
apps/linux/run_tests/: CMakeLists.txt
apps/linux/run_tests/src/: main.c
apps/zephyr/didcot_adc/: prj.conf
apps/zephyr/didcot_adc/boards/: nrf5340dk_nrf5340_cpuapp.overlay
apps/zephyr/didcot_adc/src/: main.c  main.h
apps/zephyr/run_tests/src/: main.c
apps_espidf/: sdkconfig.system
apps_espidf/didcot_dac/: CMakeLists.txt
apps_espidf/run_tests/main/: CMakeLists.txt  main.c
apps_linux/didcot_server/: CMakeLists.txt
apps_linux/didcot_server/src/: main.c  main.h  main_adc.c
apps_zephyr/didcot_adc/: CMakeLists.txt
apps_zephyr/didcot_adc/src/: didcot_sensing.c  didcot_streaming_out.c
apps_zephyr/run_tests/: CMakeLists.txt
didcot_library/: CMakeLists.txt
didcot_library/include/didcot/: didcot.h  didcot_dac.h  rpc_exit.h  rpc_ps.h  version.h
didcot_library/src/: didcot_dac.c  rpc_exit.c  rpc_ps.c  version.c
didcot_tests/: CMakeLists.txt
didcot_tests/include/: didcot_tests.h
didcot_tests/src/: test_dac.c  test_matching.c  test_rpc_exit.c  test_rpc_ps.c
scripts/: ci_espidf.sh  ci_linux.sh
webroot/: dtadc_scanlist.js  index.html  index.js  multi-renderer.js  scan-trend-chart-renderer.js  scanlist-manager.js  scanlist-parser.js  styles.css  table-renderer.js  web-socket-client.js
